--- a/src/styles.css
+++ b/src/styles.css
@@ -15,11 +15,21 @@
   /* ヘッダの音声案内 */
   --font-size-small: clamp(2rem, 3vw, 5.5rem);
   /* 上段の上段 */
-  --font-size-responsive-large: clamp(1.8rem, 6vw, 7.0rem);
+  --font-size-responsive-large: clamp(1.8rem, 7vw, 7.9rem);
   /* 上段の下段と下段の上段 */
-  --font-size-responsive-medium: clamp(1.5rem, 4.0vw, 6.0rem);
+  --font-size-responsive-medium: clamp(1.5rem, 4.5vw, 6.0rem);
   /* 下段の下段 */
-  --font-size-responsive-small: clamp(1.2rem, 3.6vw, 5.0rem);
+  --font-size-responsive-small: clamp(1.2rem, 3.8vw, 5.0rem);
+}
+
+/* スプリット表示用の文字サイズ調整 */
+.split-screen {
+  --font-size-large: clamp(2.8rem, 5.6vw, 5.04rem);
+  --font-size-medium: clamp(1.75rem, 2.8vw, 4.55rem);
+  --font-size-small: clamp(1.4rem, 2.1vw, 3.85rem);
+  --font-size-responsive-large: clamp(1.26rem, 4.2vw, 4.7rem);
+  --font-size-responsive-medium: clamp(1.05rem, 3.5vw, 4.0rem);
+  --font-size-responsive-small: clamp(0.84rem, 3.0vw, 3.5rem);
 }
 
 html, body {
@@ -29,7 +39,6 @@ html, body {
   max-height: 100vh;
   overflow: hidden;
   background: var(--color-background);
-  color: var(--color-note);
   font-weight: 700;
 }
 
@@ -37,7 +46,7 @@ html, body {
 .footer {
   background: var(--color-header-bg);
   color: var(--color-header-text);
-  padding: 0.25rem;
+  padding: 0;
   /* Row 自体が flex なので不要 */
 }
 
@@ -274,16 +283,6 @@ html, body {
   .footer {
     padding: 1rem 1.5rem 1.5rem;
   }
-}
-
-/* スプリット表示用の文字サイズ調整 */
-.split-screen {
-  --font-size-large: clamp(2.8rem, 5.6vw, 5.04rem);
-  --font-size-medium: clamp(1.75rem, 2.8vw, 4.55rem);
-  --font-size-small: clamp(1.4rem, 2.1vw, 3.85rem);
-  --font-size-responsive-large: clamp(1.26rem, 4.2vw, 4.7rem);
-  --font-size-responsive-medium: clamp(1.05rem, 3.5vw, 4.0rem);
-  --font-size-responsive-small: clamp(0.84rem, 3.0vw, 3.5rem);
 }
 
 /* スプリット表示時の「次」の丸のサイズ調整 */
